--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "test": "cucumber-js --config ./cucumber.js",
     "test:bdd": "cucumber-js --config ./cucumber.js",
+    "test:allure": "npm run test:bdd && npm run allure:generate",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
     "test:pw": "playwright test",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug",
@@ -24,6 +27,8 @@
     "@cucumber/cucumber": "^10.0.0",
     "@playwright/test": "^1.40.0",
     "@types/node": "^20.0.0",
+    "allure-commandline": "^2.36.0",
+    "allure-cucumberjs": "^3.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
   }
