--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "cucumber-js --config ./cucumber.js",
     "test:bdd": "cucumber-js --config ./cucumber.js",
     "test:bdd:api": "node -e \"require('fs').rmSync('allure-results',{ recursive: true, force: true })\" && cucumber-js --config ./cucumber.api.js",
+    "test:bdd:ui": "node -e \"require('fs').rmSync('allure-results',{ recursive: true, force: true })\" && cucumber-js --config ./cucumber.ui.js",
     "test:allure": "npm run test:bdd && npm run allure:generate",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:open": "allure open allure-report",
