--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -100,3 +100,47 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report
           destination_dir: playwright-report
+
+  pr-report-comment:
+    name: Comment PR with Report Links
+    runs-on: ubuntu-latest
+    needs: [bdd-tests, playwright-tests]
+    if: always() && github.event_name == 'pull_request'
+
+    steps:
+      - name: Download BDD artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: bdd-results
+        continue-on-error: true
+
+      - name: Construct report URLs
+        id: report-urls
+        run: |
+          # Construct GitHub Pages URL based on repository
+          REPO_OWNER=${{ github.repository_owner }}
+          REPO_NAME=${{ github.event.repository.name }}
+          ALLURE_REPORT_URL="https://${REPO_OWNER}.github.io/${REPO_NAME}/allure-report"
+          echo "allure_url=${ALLURE_REPORT_URL}" >> $GITHUB_OUTPUT
+
+      - name: Comment PR with Allure report link
+        uses: actions/github-script@v7
+        if: always()
+        with:
+          script: |
+            const allureUrl = '${{ steps.report-urls.outputs.allure_url }}';
+            const bddStatus = '${{ needs.bdd-tests.result }}';
+            const pwStatus = '${{ needs.playwright-tests.result }}';
+            
+            const statusEmoji = (status) => {
+              return status === 'success' ? '✅' : status === 'failure' ? '❌' : '⚠️';
+            };
+            
+            const comment = `## 📊 Test Report\n\n${statusEmoji(bddStatus)} **BDD Tests**: ${bddStatus}\n${statusEmoji(pwStatus)} **Playwright Tests**: ${pwStatus}\n\n### 📈 [View Allure Report](${allureUrl})`;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
