--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -1,102 +1,148 @@
-name: All Tests
+name: BDD Test Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   bdd-tests:
-    name: BDD Tests with Allure
+    name: BDD Tests (Worker ${{ matrix.worker }}/${{ strategy.job-total }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        worker: [1, 2, 3]
+      fail-fast: false
     
     steps:
-      - name: Checkout repository
+      - name: 📋 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'npm'
 
-      - name: Install dependencies
+      - name: 🔧 Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
+      - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run BDD tests
+      - name: 🧪 Run BDD Tests (Parallel Worker ${{ matrix.worker }}/3)
         run: npm run test:bdd
+        env:
+          WORKER_INDEX: ${{ matrix.worker }}
+          TOTAL_WORKERS: 3
 
-      - name: Generate Allure report
+      - name: 📊 Generate Allure Report
         if: always()
         run: npm run allure:generate
 
-      - name: Upload test results
+      - name: 📤 Upload Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: bdd-results
+          name: bdd-results-worker-${{ matrix.worker }}
           path: |
             allure-results/
             allure-report/
           retention-days: 30
 
-  playwright-tests:
-    name: Playwright Tests
+  merge-reports:
+    name: Merge Test Reports
     runs-on: ubuntu-latest
-    
+    needs: [bdd-tests]
+    if: always()
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: 📥 Download All Artifacts
+        uses: actions/download-artifact@v4
         with:
-          node-version: '20.x'
-          cache: 'npm'
+          path: ./artifacts
 
-      - name: Install dependencies
-        run: npm ci
+      - name: 📁 Merge Allure Results
+        run: |
+          mkdir -p ./merged-allure-results
+          find ./artifacts -type f -name "*.json" -path "*/allure-results/*" -exec cp {} ./merged-allure-results/ \;
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: 📊 Generate Merged Report
+        run: npx allure generate ./merged-allure-results --clean -o ./allure-report
 
-      - name: Run Playwright tests
-        run: npm run test:pw
-
-      - name: Upload test results
-        if: always()
+      - name: 📤 Upload Merged Results
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-results
-          path: playwright-report/
+          name: bdd-results-merged
+          path: |
+            merged-allure-results/
+            allure-report/
           retention-days: 30
 
-  report:
-    name: Publish Reports
+  publish-report:
+    name: 🚀 Publish Reports to GitHub Pages
     runs-on: ubuntu-latest
-    needs: [bdd-tests, playwright-tests]
+    needs: [merge-reports]
     if: always() && github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-      - name: Download BDD artifacts
+      - name: 📥 Download Merged Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: bdd-results
+          name: bdd-results-merged
+          path: ./reports
 
-      - name: Publish Allure report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: 🎨 Upload GitHub Pages Artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-          destination_dir: allure-report
+          path: ./reports
 
-      - name: Publish Playwright report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: 🌐 Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+  pr-comment:
+    name: 💬 Comment PR with Report
+    runs-on: ubuntu-latest
+    needs: [merge-reports]
+    if: always() && github.event_name == 'pull_request'
+    permissions:
+      pull-requests: write
+
+    steps:
+      - name: 📥 Download Test Results
+        uses: actions/download-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./playwright-report
-          destination_dir: playwright-report
+          name: bdd-results-merged
+        continue-on-error: true
+
+      - name: 🔗 Construct Report URLs
+        id: report-urls
+        run: |
+          REPO_OWNER=${{ github.repository_owner }}
+          REPO_NAME=${{ github.event.repository.name }}
+          ALLURE_REPORT_URL="https://${REPO_OWNER}.github.io/${REPO_NAME}/allure-report"
+          echo "allure_url=${ALLURE_REPORT_URL}" >> $GITHUB_OUTPUT
+
+      - name: 📨 Post Comment with Report Link
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const allureUrl = '${{ steps.report-urls.outputs.allure_url }}';
+            const testStatus = '${{ needs.merge-reports.result }}';
+            
+            const statusEmoji = (status) => {
+              return status === 'success' ? '✅' : status === 'failure' ? '❌' : '⚠️';
+            };
+            
+            const comment = `## 📊 BDD Test Report
