--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -17,11 +17,11 @@ permissions:
 
 jobs:
   bdd-tests:
-    name: BDD Tests (Worker ${{ matrix.worker }}/${{ strategy.job-total }})
+    name: BDD Tests (Shard ${{ matrix.shard }}/3)
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        worker: [1, 2, 3]
+        shard: [1, 2, 3]
       fail-fast: false
     
     steps:
@@ -38,30 +38,33 @@ jobs:
         run: npm ci
 
       - name: 🎭 Install Playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install --with-deps chromium
 
-      - name: 🧪 Run BDD Tests (Parallel Worker ${{ matrix.worker }}/3)
-        run: npm run test:bdd
+      - name: 🧪 Run BDD Tests (Shard ${{ matrix.shard }}/3)
+        run: npm run test:bdd -- --shard=${{ matrix.shard }}/3
         env:
-          WORKER_INDEX: ${{ matrix.worker }}
-          TOTAL_WORKERS: 3
+          CI: true
+          SHARD: ${{ matrix.shard }}
+          TOTAL_SHARDS: 3
 
       - name: 📊 Generate Allure Report
         if: always()
         run: npm run allure:generate
+        continue-on-error: true
 
       - name: 📤 Upload Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: bdd-results-worker-${{ matrix.worker }}
+          name: bdd-results-shard-${{ matrix.shard }}
           path: |
             allure-results/
             allure-report/
           retention-days: 30
+          if-no-files-found: warn
 
   merge-reports:
-    name: Merge Test Reports
+    name: 📊 Merge Test Reports
     runs-on: ubuntu-latest
     needs: [bdd-tests]
     if: always()
@@ -73,59 +76,83 @@ jobs:
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20'
           cache: 'npm'
 
       - name: 🔧 Install dependencies
         run: npm ci
 
-      - name: 📥 Download All Artifacts
+      - name: 📥 Download All Shard Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: ./artifacts
+          pattern: bdd-results-shard-*
+          path: ./all-shards
+          merge-multiple: false
 
-      - name: 📁 Merge Allure Results
+      - name: 📁 Merge Allure Results from All Shards
         run: |
+          echo "📦 Merging allure-results from all shards..."
           mkdir -p ./merged-allure-results
-          find ./artifacts -type f -name "*.json" -path "*/allure-results/*" -exec cp {} ./merged-allure-results/ \;
-          ls -la ./merged-allure-results/
+          
+          # List all downloaded artifacts for debugging
+          echo "📋 Available artifacts:"
+          ls -lah ./all-shards/ || echo "No artifacts directory found"
+          
+          # Copy all allure-results from each shard
+          for shard in ./all-shards/bdd-results-shard-*/allure-results/*; do
+            if [ -f "$shard" ]; then
+              cp "$shard" ./merged-allure-results/ || true
+            fi
+          done
+          
+          # Check if any results were merged
+          RESULT_COUNT=$(find ./merged-allure-results -type f | wc -l)
+          echo "✅ Merged $RESULT_COUNT result files"
+          ls -lah ./merged-allure-results/ || echo "No merged results found"
+        continue-on-error: true
 
-      - name: 📊 Generate Merged Report
-        run: npm run allure:generate -- ./merged-allure-results --clean -o ./allure-report
+      - name: 📊 Generate Merged Allure Report
+        run: npx allure generate ./merged-allure-results --clean -o ./allure-report
+        continue-on-error: true
 
-      - name: 📤 Upload Merged Results
+      - name: 📤 Upload Merged Report
         uses: actions/upload-artifact@v4
         with:
           name: bdd-results-merged
-          path: |
-            merged-allure-results/
-            allure-report/
+          path: ./allure-report/
           retention-days: 30
+          if-no-files-found: ignore
 
   publish-report:
     name: 🚀 Publish Reports to GitHub Pages
     runs-on: ubuntu-latest
     needs: [merge-reports]
     if: always() && github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
-      - name: 📥 Download Merged Artifacts
+      - name: 📥 Download Merged Report
         uses: actions/download-artifact@v4
         with:
           name: bdd-results-merged
-          path: ./reports
+          path: ./allure-report
+        continue-on-error: true
 
       - name: 🎨 Upload GitHub Pages Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./reports
+          path: ./allure-report
+        continue-on-error: true
 
       - name: 🌐 Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v4
+        continue-on-error: true
 
   pr-comment:
-    name: 💬 Comment PR with Report
+    name: 💬 Comment PR with Report Link
     runs-on: ubuntu-latest
     needs: [merge-reports]
     if: always() && github.event_name == 'pull_request'
@@ -133,29 +160,34 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: 📥 Download Test Results
+      - name: 📥 Download Merged Report
         uses: actions/download-artifact@v4
         with:
           name: bdd-results-merged
+          path: ./allure-report
         continue-on-error: true
 
-      - name: 🔗 Construct Report URLs
-        id: report-urls
+      - name: 🔗 Construct Report URL
+        id: report-url
         run: |
-          REPO_OWNER=${{ github.repository_owner }}
-          REPO_NAME=${{ github.event.repository.name }}
-          ALLURE_REPORT_URL="https://${REPO_OWNER}.github.io/${REPO_NAME}/allure-report"
-          echo "allure_url=${ALLURE_REPORT_URL}" >> $GITHUB_OUTPUT
+          echo "url=https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/" >> $GITHUB_OUTPUT
 
-      - name: 📨 Post Comment with Report Link
+      - name: 📨 Post PR Comment with Report Link
         uses: actions/github-script@v7
         with:
           script: |
-            const allureUrl = '${{ steps.report-urls.outputs.allure_url }}';
+            const reportUrl = '${{ steps.report-url.outputs.url }}';
             const testStatus = '${{ needs.merge-reports.result }}';
             
             const statusEmoji = (status) => {
               return status === 'success' ? '✅' : status === 'failure' ? '❌' : '⚠️';
             };
             
-            const comment = `## 📊 BDD Test Report
+            const comment = `## 📊 Test Results\n\n${statusEmoji(testStatus)} **BDD Tests Completed** (3 parallel shards)\n\n🔗 [**View Allure Report**](${reportUrl})\n\n📦 Artifacts available for 30 days`;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
