--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -66,7 +66,10 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       - name: 🧪 Run BDD Tests (Shard ${{ matrix.shard }}/3)
-        run: npm run test:bdd -- --shard=${{ matrix.shard }}/3
+        run: |
+          mkdir -p logs
+          set -o pipefail
+          npm run test:bdd -- --shard=${{ matrix.shard }}/3 2>&1 | tee logs/bdd-shard-${{ matrix.shard }}.log
         env:
           CI: true
 
@@ -80,9 +83,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: shard-${{ matrix.shard }}-results
-          path: allure-results/
+          path: |
+            allure-results/
+            logs/
           retention-days: 30
-          if-no-files-found: warn
+          if-no-files-found: error
 
   playwright-quality-tests:
     name: 🎭 Playwright Quality Tests
@@ -106,16 +111,37 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       - name: 🧪 Run Visual Tests
-        run: npm run test:visual
+        id: visual
+        continue-on-error: true
+        run: |
+          mkdir -p logs
+          set -o pipefail
+          npm run test:visual 2>&1 | tee logs/visual-tests.log
         env:
           CI: true
           BASE_URL: ${{ needs.prepare-config.outputs.base_url }}
 
       - name: ♿ Run Accessibility Tests
-        run: npm run test:a11y
+        id: a11y
+        if: always()
+        continue-on-error: true
+        run: |
+          mkdir -p logs
+          set -o pipefail
+          npm run test:a11y 2>&1 | tee logs/accessibility-tests.log
         env:
           CI: true
           BASE_URL: ${{ needs.prepare-config.outputs.base_url }}
+
+      - name: ✅ Validate Quality Steps
+        if: always()
+        run: |
+          if [ "${{ steps.visual.outcome }}" != "success" ] || [ "${{ steps.a11y.outcome }}" != "success" ]; then
+            echo "One or more quality test steps failed."
+            echo "Visual outcome: ${{ steps.visual.outcome }}"
+            echo "A11y outcome: ${{ steps.a11y.outcome }}"
+            exit 1
+          fi
 
       - name: 📤 Upload Playwright Quality Reports
         if: always()
@@ -125,8 +151,9 @@ jobs:
           path: |
             playwright-report/
             test-results/
+            logs/
           retention-days: 30
-          if-no-files-found: warn
+          if-no-files-found: error
 
   performance-tests:
     name: ⚡ Performance Tests (k6)
@@ -141,9 +168,24 @@ jobs:
         uses: grafana/setup-k6-action@v1
 
       - name: 🧪 Run k6 Performance Tests
-        run: k6 run tests/performance/homepage.k6.js
+        run: |
+          mkdir -p logs k6-results
+          set -o pipefail
+          k6 run --summary-export=k6-results/k6-summary.json --out json=k6-results/k6-metrics.json tests/performance/homepage.k6.js 2>&1 | tee logs/k6-performance.log
         env:
           BASE_URL: ${{ needs.prepare-config.outputs.base_url }}
+          CI: true
+
+      - name: 📤 Upload k6 Logs and Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: k6-performance-report
+          path: |
+            logs/k6-performance.log
+            k6-results/
+          retention-days: 30
+          if-no-files-found: error
 
   merge-reports:
     name: 📊 Merge Allure Reports
